# XIGMA

./: CLAUDE.md  Compton-example.ipynb  calculate-spec-ang.py  compare_direct_vs_table.py  compton.py  direct_vs_table_discrepancy_report.md  example-config.toml  passport.md  pyproject.toml
src/xigma_i/: __init__.py  core.py  deposition.py  particles.py  reference.py  spectrum4d.py
validation/: .gitignore  bench.py  fig_deposition.py  fig_gridres.py  fig_sampling.py  fig_validation.py  metrics.py  params.py  plotstyle.py  quadrature.py  refs.py  resonance-function.py  run_all.sh
